--- a/internationalization/Messages_he.properties
+++ b/internationalization/Messages_he.properties
@@ -24,9 +24,9 @@ button_session_cancel = Cancel
 button_session_reject = Reject
 button_session_answer = Answer
 button_call_audio = Call (audio only)
-button_reg = Register
-button_dereg = De-Register
-button_call_audio_video = Call (audio and video)
+button_reg = הרשמה
+button_dereg = ביטול הרשמה
+button_call_audio_video = (התקשרות (קול ווידאו
 button_session_answer_video = Answer (with video)
 button_session_answer_hold = Hold
 button_session_answer_hang_up = Hang-up
