--- a/internationalization/Messages_he.properties
+++ b/internationalization/Messages_he.properties
@@ -30,6 +30,6 @@ button_call_audio_video = Call (audio and video)
 button_session_answer_video = Answer (with video)
 button_session_answer_hold = Hold
 button_session_answer_hang_up = Hang-up
-button_video_control_self_view = Self view
-button_video_control_self_hide = Self hide
-button_video_control_full_screen = Full screen
+כפתור_בקרת_וידאו_תצוגה_עצמית = תצוגה עצמית
+כפתור_בקרת_וידאו_הסתרה_עצמית=הסתרה עצמית
+כפתור_בקרת_וידאו_מסך_מלא=מסך מלא
